# mprpc

./: .gitignore  CMakeLists.txt
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.pb.h  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
